# tiralabra

./: .coveragerc  .gitignore  .pylintrc  README.md  performance_report.xlsx  pyproject.toml  tasks.py
.github/workflows/: build.yml  codecov.yml
docs/: KAYTTOOHJE.md  MAARITTELYDOKUMENTTI.md  TESTAUSDOKUMENTTI.md  TOTEUTUSRAPORTTI.md
docs/Viikkoraportit/: Viikkoraportti 1.md  Viikkoraportti_1.md  Viikkoraportti_2.md  Viikkoraportti_3.md  Viikkoraportti_4.md  Viikkoraportti_5.md  Viikkoraportti_6.md  viikko1.md
src/: index.py  labyrinth.py  labyrinth_drawer.py  main.py  performance_test.py
src/generators/: maze_generator_dfs.py  maze_generator_prim.py  path_generator.py
src/tests/: labyrinth_test.py  performance_test.py
