[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Sasha Usoskin <sashausoskin@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
invoke = "^1.7.3"
pytest = "^7.2.0"
coverage = "^6.5.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.5"
black = "^22.10.0"
XlsxWriter = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
